--- a/src/index.scss
+++ b/src/index.scss
@@ -79,7 +79,20 @@ body {
 }
 
 #root{
-  max-width: 1200px;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: auto;
+  scrollbar-color: var(--bs-indigo) var(--bs-body-bg);
+  scrollbar-width:thin;
+  & > * {
+    max-width: 1200px;
+    @media only screen and (max-width: 768px){
+      max-width: 100vw;
+    }
+  }
 }
 
 @keyframes wave-animation {
