--- a/src/App.scss
+++ b/src/App.scss
@@ -28,6 +28,38 @@
   color: #61dafb;
 }
 
+.loading{
+  position: fixed;
+  max-width:100vw!important;
+  height: 100%;
+  width: 100%;
+  top: 5px;
+  left: 0;
+  background: #000;
+  transition: .75s;
+  .loading-title {
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 5em;
+    letter-spacing: .085em;
+    margin: 4.5rem 0 1rem;
+    color: #fff;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
+  .loading-progress {
+    height: 5px;
+    background: var(--bs-indigo);
+    top: -5px;
+    width: 100%;
+    position: absolute;
+    transition: .35s;
+  }
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
